--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/wheel.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
+
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -38,7 +40,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top">Start Bootstrap</a>
+                <a href="#top">Jo Vinkenroye</a>
             </li>
             <li>
                 <a href="#top">Home</a>
@@ -47,7 +49,7 @@
                 <a href="#about">About</a>
             </li>
             <li>
-                <a href="#services">Services</a>
+                <a href="#services">Expertise</a>
             </li>
             <li>
                 <a href="#portfolio">Portfolio</a>
@@ -59,43 +61,56 @@
     </nav>
 
     <!-- Header -->
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <h1>Jo Vinkenroye</h1>
-            <img class="img-circle" src="img/profile.png" alt="">
-            <h3>Commercial engineer - Automation specialist - Web Developer </h3>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
-        </div>
+    <header id="header" class="header text-center"> 
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12 text-left">
+                    <h1 class="headtitle">JO VINKENROYE</h1>
+                    <h4 class="headtitle">Commercial engineer - Automation specialist - Web Developer </h4>
+                    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+                </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div id="vis" class="text-center">
+                    </div>
+                </div>
+            </div>      
+        </div>       
     </header>
+
 
     <!-- About -->
     <section id="about" class="about">
-        <div class="container">
+         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Web development knowledge</h2>
-                    <p class="lead">My web development knowledge tree: </p>
+                <div class="col-sm-6 col-md-3 col-lg-2 text-left">
+                    <img class="img-circle" src="img/profile.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-1 col-lg-1 text-left">
+                </div>   
+                <div class="col-sm-6 col-md-8 col-lg-9 text-right">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vulputate aliquet tortor. Suspendisse justo justo, rutrum eu turpis in, vulputate laoreet urna. In lacus turpis, pharetra quis aliquet in, ultrices vitae erat. Duis porta euismod finibus. Donec pulvinar lacus justo, ut consequat purus convallis et. Quisque venenatis porta eros quis fringilla. Phasellus a interdum diam, auctor pellentesque dolor. Fusce tristique viverra diam. Proin ut ultrices lorem, nec hendrerit justo. Proin suscipit, ante sit amet tristique suscipit, neque turpis mattis velit, sed malesuada nisi velit nec odio. Etiam lorem est, molestie in ligula at, sollicitudin volutpat lorem.
+
+Cras sed varius enim. Nullam eu elit id diam vehicula laoreet at eu arcu. Phasellus rutrum augue mi, a facilisis tellus iaculis eget. Ut a sapien est. Donec at justo nec leo dictum dictum. Nulla facilisi. Vivamus vitae turpis elit. Fusce eleifend tellus eu facilisis dictum. Aliquam eu tempor orci. Integer quis rutrum quam, eget imperdiet neque. Mauris luctus ultrices urna a fringilla. Vestibulum hendrerit mauris nibh. In tincidunt, quam at molestie mattis, nisl quam condimentum ligula, vel consectetur dolor quam a nulla.
+
+Proin fringilla nunc augue, in semper neque pellentesque eget. Sed scelerisque leo eros, vitae maximus metus convallis ac. Ut sollicitudin eu massa non rutrum. Donec tempor pharetra orci nec porta. Morbi hendrerit blandit urna. Suspendisse congue massa lorem, ac cursus odio ultricies a. Nullam vitae molestie enim, nec luctus metus. Donec hendrerit aliquet dictum. Donec ut mauris venenatis, pretium justo sit amet, volutpat purus. Fusce mollis ex mi, eu laoreet lacus hendrerit eget. Ut interdum arcu feugiat magna rhoncus blandit. Mauris eu massa magna. Nulla ac auctor risus. Aenean vitae odio sit amet orci viverra convallis in non ante. Suspendisse hendrerit, magna ut luctus consequat, lacus quam varius magna, vel euismod ligula mauris id lacus.
+
+Donec ultrices felis eget porttitor venenatis. Vestibulum vitae ipsum eget sem semper mollis. Cras non dictum nisl. Maecenas pharetra tempor nisl lacinia suscipit. Praesent mollis urna sed ipsum lobortis imperdiet. Donec finibus pharetra augue nec blandit. Integer sit amet eros non lacus condimentum maximus. Pellentesque tempus blandit scelerisque. Cras sit amet enim sed elit lacinia commodo. Duis et eros et lorem consequat commodo posuere non nunc. Quisque dignissim, ante ac consequat rutrum, purus justo dictum dui, sed gravida mi mauris quis tortor. Cras iaculis fermentum orci, in dictum felis. Pellentesque sollicitudin mauris eu elit molestie euismod.
                 </div>
             </div>
-
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
+        </div>  
     </section>
 
-    <!-- tech tree -->
-    <section class="wdkt">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src=""></iframe>
-    </section>
+   
 
-    <!-- Services -->
+
+    <!-- expertise -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
     <section id="services" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
+                    <h2>My expertise</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -271,7 +286,8 @@
             </div>
         </div>
     </footer>
-
+    <script src="js/d3.min.js"></script>
+    <script src="js/wheel.js"></script>
     <!-- jQuery Version 1.11.0 -->
     <script src="js/jquery-1.11.0.js"></script>
 
