contact info added

--- a/index.html
+++ b/index.html
@@ -163,23 +163,32 @@
                     </h4>
                     <p>Thonissenlaan 59<br>3500, Hasselt, Belgium</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">jov2all@gmail.com</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-skype fa-fw fa-3x"></i></a>
+                            <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+                        <div id="SkypeButton_Call_jobrussel_1">
+                          <script type="text/javascript">
+                            Skype.ui({
+                              "name": "dropdown",
+                              "element": "SkypeButton_Call_jobrussel_1",
+                              "participants": ["jobrussel"],
+                              "imageSize": 32
+                            });
+                          </script>
+                        </div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/jestersimpps"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                            <a href="http://be.linkedin.com/pub/jo-vinkenroye/63/a79/459"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/jestersimpps"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
