parallax and opacity readjusted

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
  
 
-
+    <!--<div id="bg"></div>-->
 
     <!-- Navigation -->
     <a href ="#top" id="homebutton" class="btn btn-dark btn-circle"><i class="fa fa-asterisk"></i></a>
@@ -73,7 +73,7 @@
                 </div>
  
                 <div class="col-sm-12 col-md-9 col-lg-6 text-right">
-                    <img class="img-circle" src="img/profile.jpg" alt="">
+                    <img class="img-circle" src="img/Profile.jpg" alt="">
                     
                     <div class="text-left">
                     <h1>About me</h1>
@@ -104,7 +104,6 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Portfolio examples</h2>
-                    <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
@@ -146,6 +145,7 @@
 
     <!-- Map -->
     <section id="contact" class="map">
+        
         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.4584465637968!2d5.336058200000005!3d50.93373419999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1217fee855095%3A0xf9b715f968e310d0!2sThonissenlaan+59%2C+3500+Hasselt!5e0!3m2!1sen!2sbe!4v1410016136588"</iframe>
         <br />
         <small>
@@ -156,6 +156,7 @@
 
     <!-- Footer -->
     <footer>
+        <h2 class="text-center">Contact information</h2>
         <div class="footer container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
